tests/negative/neg_pr1111b_interface_qualified_free_call.safe
package neg_pr1111b_interface_qualified_free_call

   type printable is interface
      function (self : printable) label returns string;

   type widget is record
      text : string;

   function (self : widget) label returns string
      return self.text;

   function render (item : printable) returns string
      return neg_pr1111b_interface_qualified_free_call.label (item);
